--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "@types/mocha": "~5.2.7",
     "chai": "~4.2.0",
     "core-js": "~3.6.4",
-    "mocha": "~6.2.2",
+    "mocha": "~7.1.2",
     "parcel-bundler": "~1.12.4",
     "source-map-support": "~0.5.16",
     "ts-node": "~8.5.4",
     "ts-time": "file:core/main/dist",
     "ts-time-format": "file:format/main/dist",
     "typescript": "~3.8.3",
-    "yaml-doc": "file:../../docgen/git/core/main/dist",
-    "yaml-doc-bootstrap": "file:../../docgen/git/templates/bootstrap/main/dist"
+    "yaml-doc": "~0.1.0",
+    "yaml-doc-bootstrap": "~0.1.1"
   }
 }
